base.js: 	- Added another line to deal with weird spacing on the odds element 	- Error was due to absolute positioning. This should be the cleanest fix base.css: 	- Fixed a handful of bugs 	- Made some minor repsonsive additions 	- Added the neccessary code for the dice game page 	- Added the code for the transfer page base.html: 	- Added a line for modal on the template dice.html: 	- Fleshed out the dice page in HTML flip.html: 	- Missed an end tag

--- a/static/base.css
+++ b/static/base.css
@@ -584,7 +584,7 @@ header .active {
 }
 
 body[data-page="dice"] .game {
-    min-height: calc(100vh - 100px);
+    min-height: 65vh;
 }
 
 body[data-page="flip"] .game {
@@ -692,12 +692,22 @@ body[data-page="crash"] .game, body[data-page="transfer"] .game {
     justify-content: center;
 }
 
+div[data-color] {
+    box-shadow: 0 1px 3px rgba(0, 0, 0, .5);
+}
+
 div[data-color="red"] {
     background-color: #FF5B5B;
+    box-shadow: 0 1px 3px rgba(0, 0, 0, .5);
 }
 
 div[data-color="green"] {
     background-color: #1ABE65;
+}
+
+div[data-color="white"] {
+    background-color: white;
+    color: black;
 }
 
 div[data-color="black"] {
@@ -710,6 +720,10 @@ div[data-color].button {
     min-width: 170px;
     align-items: center;
     justify-content: center;
+}
+
+.dice .bet-con .coins {
+    margin-left: 0;
 }
 
 .bet-con > .button {
@@ -787,9 +801,9 @@ body[data-page="roulette"] .bet-con > .bet-inp .button {
 }
 
 .game > .odds {
-    position: relative;
+    position: absolute;
     left: 0;
-    bottom: -55px;
+    bottom: -25px;
     z-index: 5;
     box-sizing: border-box;
     padding: 0 30px 0 80px;
@@ -807,6 +821,8 @@ body[data-page="roulette"] .bet-con > .bet-inp .button {
     -ms-flex-pack: center;
     justify-content: center;
     height: 50px;
+    padding: 15px;
+    box-sizing: border-box;
 }
 
 .game > .button.cta {
@@ -854,22 +870,50 @@ body[data-page="roulette"] .bet-con > .bet-inp .button {
     box-sizing: border-box;
 }
 
-.crash-left > .tab-con {
+.crash-left > .tab-con, .dice > .tab-con, .board-con > .tab-con {
     padding: 15px;
 }
 
-.crash-left .tab {
+.tab-con .button {
+    border-bottom: 2px solid rgba(0, 0, 0, .075);
+}
+
+.tab-con .button.active, .tab-con .button:hover {
+    color: #1ABE65;
+}
+.tab-con .button.active {
+    border-color: #1ABE65;
+}
+
+.dice > .tab-con {
+    padding-left: 0;
+    padding-right: 0;
+}
+
+.dice .divider {
+    margin-top: 30px;
+    margin-bottom: 30px;
+}
+
+.divider {
+    border-bottom: 1px solid rgba(255, 255, 255, .075);
+    width: 100%;
+    flex-shrink: 0;
+}
+
+.crash-left .tab, .dice .tab, .board-con .tab {
     display: inline-block;
     text-align: center;
     padding-top: 5px;
     height: 40px;
+    color: rgba(120, 127, 131, 1);
 }
 
-.crash-left .tab.button {
+.crash-left .tab.button, .dice .tab.button {
     border-bottom: 2px solid rgba(255, 255, 255, .075);
 }
 
-.crash-left .tab.button.active {
+.crash-left .tab.button.active, .dice .tab.button.active {
     border-bottom: 2px solid rgba(255, 255, 255, .2);
 }
 
@@ -929,6 +973,7 @@ body[data-page="roulette"] .bet-con > .bet-inp .button {
 
 .highlight {
     color: #1ABE65;
+    border-color: #1ABE65;
 }
 
 .table-con > table td {
@@ -1060,6 +1105,7 @@ body[data-page="roulette"] .bet-con > .bet-inp .button {
 .transfer .cards-con .card {
     position: relative;
     width: 30%;
+    min-width: 150px;
     background-color: #1F2528;
     padding: 15px;
     box-sizing: border-box;
@@ -1097,11 +1143,6 @@ body[data-page="roulette"] .bet-con > .bet-inp .button {
     min-height: calc(100vh - 50px);
 }
 
-body[data-page="dice"] .boards {
-    min-height: 0;
-    display: none;
-}
-
 .board-con {
     margin-top: 50px;
     max-width: 1200px;
@@ -1109,6 +1150,19 @@ body[data-page="dice"] .boards {
     padding-right: calc(50% - 600px + 30px);
     border-top: solid 1px rgba(0, 0, 0, .1);
     padding-top: 30px;
+}
+
+.board-con .tab-con {
+    margin-bottom: 30px;
+}
+
+.board-con .table-con table td {
+    border-bottom: solid 1px rgba(0, 0, 0, .1);
+}
+
+.board-con .table-con table {
+    color: rgba(120, 127, 131, 1);
+    width: 100%;
 }
 
 @media screen and (min-width: 1300px) {
